--- a/classication_satellite images.ipynb
+++ b/classication_satellite images.ipynb
@@ -32,7 +32,7 @@
     "## 0. Contexto y carga de librerías\n",
     "El monitoreo del uso y de la cobertura de la tierra mediante imágenes satelitales juega un papel fundamental en temas como el cambio climático, la gestión de recursos medioambientales, planificación urbana o en la creación de políticas para el desarrollo sostenible.\n",
     "\n",
-    "En esta práctica, trabajaremos con la base de datos [UC Merced Land Use Data](http://weegee.vision.ucmerced.edu/datasets/landuse.html), que consiste en imágenes satelitales de 256x256 píxeles de 21 escenas diferentes: las clases son diversas, conteniendo desde escenas a imágenes de aviones o ríos; entre otras categorías.\n"
+    "Trabajaremos con la base de datos [UC Merced Land Use Data](http://weegee.vision.ucmerced.edu/datasets/landuse.html), que consiste en imágenes satelitales de 256x256 píxeles de 21 escenas diferentes: las clases son diversas, conteniendo desde escenas a imágenes de aviones o ríos; entre otras categorías.\n"
    ]
   },
   {
@@ -175,7 +175,7 @@
     "id": "SOPrRdH_audi"
    },
    "source": [
-    "## 1. Exploración y preprocesado de los datos (1 punto)\n",
+    "## 1. Exploración y preprocesado de los datos\n",
     "\n",
     "En este apartado exploraremos la base de datos y prepararemos la carga de las imágenes para los modelos de los siguientes apartados.\n",
     "\n",
