new nb about classification

--- a/nbs/classification_leaf.ipynb
+++ b/nbs/classification_leaf.ipynb
@@ -5,17 +5,6 @@
    "id": "german-default",
    "metadata": {},
    "source": [
-    "<div style=\"width: 100%; clear: both;\">\n",
-    "<div style=\"float: left; width: 50%;\">\n",
-    "<img src=\"http://www.uoc.edu/portal/_resources/common/imatges/marca_UOC/UOC_Masterbrand.jpg\", align=\"left\">\n",
-    "</div>\n",
-    "<div style=\"float: right; width: 50%;\">\n",
-    "<p style=\"margin: 0; padding-top: 22px; text-align:right;\">M2.875 · Deep Learning · PRAC</p>\n",
-    "<p style=\"margin: 0; text-align:right;\">2020-2 · Máster universitario en Ciencia de datos (Data science)</p>\n",
-    "<p style=\"margin: 0; text-align:right; padding-button: 100px;\">Estudios de Informática, Multimedia y Telecomunicación</p>\n",
-    "</div>\n",
-    "</div>\n",
-    "<div style=\"width:100%;\">&nbsp;</div>\n",
     "\n",
     "# Deep Learning\n",
     "\n",
@@ -27,7 +16,7 @@
    "id": "given-developer",
    "metadata": {},
    "source": [
-    "Nombre: **Adonis González Godoy**"
+    "**Adonis González Godoy**"
    ]
   },
   {
@@ -70,7 +59,7 @@
    "metadata": {},
    "source": [
     "<div style=\"text-align: justify\">\n",
-    "El conjunto de datos de la práctica, etiquetado por expertos atendiendo a la enfermedad foliar de\n",
+    "El conjunto de datos, etiquetado por expertos atendiendo a la enfermedad foliar de\n",
     "la manzana, está formado por dos conjuntos de imágenes: uno de entrenamiento formado por 9.750 imágenes RGB y otro de test sin clasificar formado por un total de 7.527 imágenes. \n",
     "</div>\n",
     "\n",
@@ -95,7 +84,7 @@
    "metadata": {},
    "source": [
     "<div style=\"text-align: justify\">    \n",
-    "El objetivo principal de la práctica es desarrollar modelos basados en el aprendizaje\n",
+    "Desarrollar modelos basados en el aprendizaje\n",
     "automático para clasificar con precisión la enfermedad que afecta a la hoja de la\n",
     "fotografía analizada.\n",
     "</div>"
